quote lisy added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,5 @@
   </h1>
   </div>
 <app-my-signup-form></app-my-signup-form>
-
-<!-- <app-quote-list></app-quote-list> -->
+<app-quote-list></app-quote-list>
 
